# crypto_trading_bot

./: .env  .gitignore  ALL_IN_CODE.py  BINANCE_TESTNET_SETUP.md  Changelog.md  Untitled-1.py  apply_bridge_call_patch.py  apply_cli_and_live_hotfix_all_in_one.py  apply_cli_live_rescue_v5.py  apply_cli_updated_rescue_patch.py  apply_compat_sig_global_patch.py  apply_compat_signal_side_map_patch.py  apply_compat_timesync_balance_patch.py  apply_core_utils_validate_symbol_stub.py  apply_final_unified_patch_v3.py  apply_live_cli_rescue_v5.py  apply_live_engine_fix_patch.py  apply_live_engine_guardrails_v6.py  apply_live_engine_guardrails_v7.py  apply_live_engine_guardrails_v8.py  apply_live_engine_hotfix_v5.py  apply_live_orders_cooldown_patch.py  apply_live_signal_risk_guardrails_v8.py  apply_marketdata_provider_stub_fix.py  apply_orders_enum_compat_patch.py  apply_patches.py  apply_runner_trace_patch.py  apply_signals_input_adapter_patch.py  apply_signals_module_sig_global_patch.py  apply_signals_sig_autoguard_all.py  apply_unified_hotfix_v4.py  apply_unified_imba_patch.py  apply_unified_live_fix_v2.py  apply_unified_master_patch.py  apply_unified_master_patch_v5.py  cli.py  cli_integrated.py  cli_integrated.py.bak_cli  cli_integrated.py.bak_cli_fix_v5  cli_integrated.py.bak_cliint_v3  (+37 more)
core/: config.py  config.py.backup  constants.py  constants.py.backup  env_overrides.py.bak_envovr_v4  env_overrides.py.bak_unified_v5  utils.py.bak_unified_v5  utils.py.bak_utils_v3
data/: __init__.py  fetchers.py  indicators.py  simulator.py
docs/: development_guide.md  paper_trading_async_notes.md
exchange/: client.py  exits.py  market_data.bak_marketdata_stub  market_data.py  orders.py  orders.py.bak  positions.py
fix/: fix_await_and_market_data.py  fix_cli_config.py  fix_cli_final.py  fix_final_issues.py  fix_import_errors.py  fix_signal_strength.py  fix_user_config.py  fix_user_imports.py
runner/: backtest.py  live.bak_guardrails_v6.py  live.bak_guardrails_v7.py  live.bak_guardrails_v8.py  live.bak_v8_guardrails.py  live.py  paper.py
strategy/: dca.py  exits.py  signals.py  signals.py.backup_20251001_192141  signals.py.backup_import_fix_20251001_194744  signals.py.backup_market_data_20251001_200717  signals.py.backup_market_data_20251001_205429  signals.py.backup_market_data_20251001_205715  signals.py.backup_windows_fix_20251001_200043  signals.py.bak_input  signals_ultra.py
tests/: test_demo_traiding.py  test_paper_trading_async_start.py  (+1 more)
(+23 files in other folders)
